@@ -1,3 +1,8 @@
+2003-05-01  Terry <tbiggs@users.sf.net>
+
+	* added url_requested() to gnome/html.c to display images
+	
+
 2003-04-29  Terry <tbiggs@users.sf.net>
 
 	* bumped to 0.9.dev4
